--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "app-root-path": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "express-rate-limit": "^3.4.0"
+    "express-rate-limit": "^3.4.0",
+    "lodash": "^4.17.11",
+    "morgan": "^1.9.1",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
