--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Pokemon REST API",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node ./bin/www"
+    "start": "nodemon --exec babel-node ./bin/www",
+    "test": "jest --watchAll"
   },
   "author": "",
   "license": "ISC",
@@ -25,8 +26,11 @@
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.4",
     "@babel/register": "^7.0.0",
+    "babel-jest": "^24.1.0",
     "eslint": "^5.14.1",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.16.0"
+    "eslint-plugin-import": "^2.16.0",
+    "jest": "^24.1.0",
+    "supertest": "^3.4.2"
   }
 }
