--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "description": "Pokemon REST API",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node ./bin/www",
-    "test": "jest --watchAll"
+    "preinstall": "npm install pm2 babel -g",
+    "start": "pm2-runtime start ecosystem.config.js --env production",
+    "test": "NODE_ENV=test jest",
+    "dev": "nodemon --exec babel-node ./bin/www"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "app-root-path": "^2.1.0",
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-rate-limit": "^3.4.0",
+    "express-redis-cache": "^1.1.3",
     "lodash": "^4.17.11",
     "morgan": "^1.9.1",
     "winston": "^3.2.1"
@@ -26,6 +30,7 @@
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.4",
     "@babel/register": "^7.0.0",
+    "axios-mock-adapter": "^1.16.0",
     "babel-jest": "^24.1.0",
     "eslint": "^5.14.1",
     "eslint-config-airbnb-base": "^13.1.0",
