updated README with Running Tests instructios

--- a/example.env
+++ b/example.env
@@ -1,2 +1,4 @@
- whitelist=['http://localhost:9080']
- PORT=3330
+ WHITELIST=['http://localhost:8080']
+ PORT=8080
+ REDIS_HOST=127.0.0.1
+ REDIS_PORT=6379
